2006-05-04  Hendrik Tews  <tews@penguin.cs.kun.nl>

	* timing and GC experiments

2006-05-03  Hendrik Tews  <tews@debian>

	* nullable comment that has not been triggered: TP_type.name
	
	* nullpointer exception without nullable comment:
	PQ_qualifier.templArgs
	PQ_template.templArgs
	E_stringLit.continuation
	E_delete.expr
	FullExpression.expr
	TemplateDeclaration.params
	TemplateArgument.next
	

2006-05-03  Hendrik Tews  <tews@ithif59.inf.tu-dresden.de>

	ELSA:
	* use TRACE env var in regrtest 
	* add another 13 nullable's
	* regression test pass now with ocaml serialization !!

2006-05-03  Hendrik Tews  <tews@debian>

	AST:
	* pointerType option to register nullable pointer types like
	  StringRef; all these pointer types are stored in the 
	  new global StringSet pointerTypes 
	* configured OCAMLC to avoid perl warning

	ELSA:
	* fixed null pointer problem in PQ_qualifier, FullExpression
	

2006-05-02  Hendrik Tews  <tews@penguin.cs.kun.nl>

	SMBASE:
	* deleted to nullable define
	
	AST: 
	* added nullable flag to contructor arguments
	  + ast syntax: astclass(nullable ... )
	  + checked for in parseCtorArg (together with owner)
	* ocaml marshalling translates nullable into option types
	* assertion checks for nullable fields in constructors are
	  disabled for the moment (seems some fields are filled in later)
	* astgen: new assertNonNullCtorArgs to emit assertion checks in
	  constructors (not used at the moment)
	* astgen: new ocaml_arg_list simplifies code for marshalling
	  childs
	* configure detects ocaml (for ocamlhelp.cc)
	* added option_some_constr for (Some x) to ocamlhelp.{h,cc}

	ELSA:
	* successfully run regression tests
	* added -ocaml option to regrtest to run test with ocaml
	  marshalling
	* started nullable debugging with regrtest -ocaml (9 nullable
	  added so far, one undocumented)

2006-05-01  Hendrik Tews  <tews@penguin.cs.kun.nl>

	* renamed Type into CType

	* fixed bug in elkhound grammar: Tok_ARROW for "->"