@@ -78,5 +78,6 @@ save
 bigin
 *.cmi
 *.cmo
-cc_ast_gen_ml.ml
 quickocamltest
+cc_ast_gen.ml
+cc_ast_gen_type.ml
