@@ -1,4 +1,6 @@
-cc_ast_gen_ml.cmo: cc_ml_types.cmo 
-cc_ast_gen_ml.cmx: cc_ml_types.cmx 
-caml_callbacks.cmo: cc_ml_types.cmo cc_ast_gen_ml.cmo 
-caml_callbacks.cmx: cc_ml_types.cmx cc_ast_gen_ml.cmx 
+cc_ast_gen_type.cmo: cc_ml_types.cmo 
+cc_ast_gen_type.cmx: cc_ml_types.cmx 
+cc_ast_gen.cmo: cc_ast_gen_type.cmo 
+cc_ast_gen.cmx: cc_ast_gen_type.cmx 
+caml_callbacks.cmo: cc_ml_types.cmo cc_ast_gen.cmo 
+caml_callbacks.cmx: cc_ml_types.cmx cc_ast_gen.cmx 
